Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.38 [20131127] [svn: r535]
  - sg_ses: add --dev-slot-num= and --sas-addr=
    - error and warning message cleanup
  - sg_inq: add --block=0|1 option to control opens
    - sync version descriptors dated 20131126
    - fix overflow in encode_whitespaces
  - sg_luns: guard against garbage response
  - sg_lib_data: sync asc/ascq codes with T10 dated 20131110
  - examples: add sg_tst_excl3 for testing O_EXCL
    - improve sg_tst_excl and sg_tst_excl2
    - add sg_tst_context for testing file handle contexts
  - upgrade automake to version 1.13.3

Changelog for sg3_utils-1.37 [20131014] [svn: r522]
  - sg_compare_and_write: fix wrprotect setting
    - add --quiet option to suppress miscompare report
    - merge features from another implementation
  - sg_inq: fix referrals VPD page
    - dev_id VPD: T10 vendor id designator clean up
  - sg_logs: improve for tape drives, general cleanup
  - sg_persist: fix core dump on -Q option
  - sg_unmap: fix core dump on -g option
  - sg_vpd: dev_id VPD: T10 vendor id designator clean up
    - cleanup up dev_id NAA-3: locally assigned
  - sg_ses: add --nickname and --nickid options
    - eiioe added to additional element status page (ses3r6)
    - multiple --filter options to prune output
  - sg_verify: improve miscompare handling
    - rename --btychk=ndo option to --ndo=ndo (hide former)
    - add --quiet option
  - sg_xcopy: allow sg and bsg devices
    - fix for bpt going negative
    - limit each XCOPY(LID1) command to 65535 blocks
    - fix for seek in multi-segment copies
  - sg_sanitize: skip 15 second safety delay with --fail
  - sg_libs: extended copy opcode renamed (spc4r34)
    - sg_ll_receive_copy_results(): expand for all sa_s
    - add sg_get_sense_key()